force-app/main/default/objects/Lead/fields/Interview_Time_AC__c.field-meta.xml
<CustomField>
    <fullName>Interview_Time_AC__c</fullName>
    <formula>If( ISNULL(Interview_Date_Time_AC__c ),&quot;&quot; ,LEFT(RIGHT(text( Interview_Date_Time_AC__c + 330/1440),9),8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview Time (AC)</label>
    <type>Text</type>
</CustomField>