force-app/main/default/objects/Lead/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <label>Interview Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Now</fullName>
            </value>
            <value>
                <fullName>Later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>