force-app/main/default/objects/Lead/fields/Is_Interview_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Is_Interview_Conducted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Interview Conducted</label>
    <type>Checkbox</type>
</CustomField>