force-app/main/default/objects/Lead/fields/is_Lead_Scored__c.field-meta.xml
<CustomField>
    <fullName>is_Lead_Scored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Lead Scored</label>
    <type>Checkbox</type>
</CustomField>