force-app/main/default/objects/Lead/fields/Is_Remarketing_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Remarketing_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Remarketing Lead</label>
    <type>Checkbox</type>
</CustomField>