force-app/main/default/objects/Lead/fields/isQualityScoreUpdated__c.field-meta.xml
<CustomField>
    <fullName>isQualityScoreUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isQualityScoreUpdated</label>
    <type>Checkbox</type>
</CustomField>