force-app/main/default/objects/Lead/fields/IVR_Called__c.field-meta.xml
<CustomField>
    <fullName>IVR_Called__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IVR Called</label>
    <type>Checkbox</type>
</CustomField>