force-app/main/default/objects/Lead/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <label>Last Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>