force-app/main/default/objects/Lead/fields/Last_Called_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Called_Date_Time__c</fullName>
    <label>Last Connected Date Time</label>
    <type>DateTime</type>
</CustomField>