force-app/main/default/objects/Lead/fields/Last_Connected_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Connected_Date__c</fullName>
    <label>Last Called Date Time</label>
    <type>DateTime</type>
</CustomField>