force-app/main/default/objects/Lead/fields/Last_Executive_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Executive_Activity__c</fullName>
    <label>Last Executive Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>