force-app/main/default/objects/Lead/fields/Last_Executive_Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Executive_Activity_Date_Time__c</fullName>
    <label>Last Executive Activity Date/Time</label>
    <type>DateTime</type>
</CustomField>