force-app/main/default/objects/Lead/fields/Last_Learner_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Learner_Activity__c</fullName>
    <label>Last Learner Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>