force-app/main/default/objects/Lead/fields/Last_Learner_Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Learner_Activity_Date_Time__c</fullName>
    <label>Last Learner Activity Date/Time</label>
    <type>DateTime</type>
</CustomField>