force-app/main/default/objects/Lead/fields/Latest_Application_Activity__c.field-meta.xml
<CustomField>
    <fullName>Latest_Application_Activity__c</fullName>
    <label>Latest Application Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>