force-app/main/default/objects/Lead/fields/Latest_Application_Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Latest_Application_Activity_Date_Time__c</fullName>
    <label>Latest Application Activity Date/Time</label>
    <type>DateTime</type>
</CustomField>