force-app/main/default/objects/Lead/fields/Lead_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead Age</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>