force-app/main/default/objects/Lead/fields/Lead_Audited__c.field-meta.xml
<CustomField>
    <fullName>Lead_Audited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Audited</label>
    <type>Checkbox</type>
</CustomField>