force-app/main/default/objects/Lead/fields/Lead_Count__c.field-meta.xml
<CustomField>
    <fullName>Lead_Count__c</fullName>
    <formula>if( Called_Unique__c &gt;=0,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>