force-app/main/default/objects/Lead/fields/Lead_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Time__c</fullName>
    <formula>If( ISNULL(CreatedDate ),&quot;&quot; ,LEFT(RIGHT(text( CreatedDate + 330/1440),9),8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created Time</label>
    <type>Text</type>
</CustomField>