force-app/main/default/objects/Lead/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <description>Lead Id</description>
    <displayFormat>L-{YYYY}{MM}-{0}</displayFormat>
    <label>Lead Id</label>
    <type>AutoNumber</type>
</CustomField>