force-app/main/default/objects/Lead/fields/Lead_Key__c.field-meta.xml
<CustomField>
    <fullName>Lead_Key__c</fullName>
    <externalId>true</externalId>
    <label>Lead Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>