force-app/main/default/objects/Lead/fields/Lead_Link__c.field-meta.xml
<CustomField>
    <fullName>Lead_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://relevel.lightning.force.com/lightning/r/Lead/&quot;+Id+&quot;/view&quot;, &quot;Lead Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Link</label>
    <type>Text</type>
</CustomField>