force-app/main/default/objects/Lead/fields/Lead_MTD_Business__c.field-meta.xml
<CustomField>
    <fullName>Lead_MTD_Business__c</fullName>
    <formula>IF(AND(MONTH( First_Activity_Date__c )=6,User_Category__c=&apos;Business&apos;),
Lead_Count__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads MTD-Business</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>