force-app/main/default/objects/Lead/fields/Lead_status__c.field-meta.xml
<CustomField>
    <fullName>Lead_status__c</fullName>
    <label>Lead status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Payment Made</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Not Contact</fullName>
            </value>
            <value>
                <fullName>No access to desktop/laptop</fullName>
            </value>
            <value>
                <fullName>Cannot understand English</fullName>
            </value>
            <value>
                <fullName>Just Checking Details</fullName>
            </value>
            <value>
                <fullName>Joined/Will join competitor</fullName>
            </value>
            <value>
                <fullName>Fee is High</fullName>
            </value>
            <value>
                <fullName>Next Batch</fullName>
            </value>
            <value>
                <fullName>Professionally Busy</fullName>
            </value>
            <value>
                <fullName>Personal Reason</fullName>
            </value>
            <value>
                <fullName>Travelling Abroad / Onsite</fullName>
            </value>
            <value>
                <fullName>Looking for another Program</fullName>
            </value>
            <value>
                <fullName>Enrolled for another Program with us</fullName>
            </value>
            <value>
                <fullName>Did not Enquire</fullName>
            </value>
            <value>
                <fullName>Looking for WFH jobs</fullName>
            </value>
            <value>
                <fullName>Do not have laptop/desktop</fullName>
            </value>
            <value>
                <fullName>Can not understand English</fullName>
            </value>
            <value>
                <fullName>Can not pay 1st EMI as well</fullName>
            </value>
            <value>
                <fullName>Loan Rejected</fullName>
            </value>
            <value>
                <fullName>Work Experience</fullName>
            </value>
            <value>
                <fullName>Age Bar</fullName>
            </value>
            <value>
                <fullName>Poor Communication</fullName>
            </value>
            <value>
                <fullName>Not a Graduate</fullName>
            </value>
            <value>
                <fullName>Score is low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>