force-app/main/default/objects/Lead/fields/Lead_Substatus__c.field-meta.xml
<CustomField>
    <fullName>Lead_Substatus__c</fullName>
    <label>Lead Substatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>