force-app/main/default/objects/Lead/fields/Lead_Version__c.field-meta.xml
<CustomField>
    <fullName>Lead_Version__c</fullName>
    <label>Lead Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V0</fullName>
            </value>
            <value>
                <fullName>V1</fullName>
                <default>true</default>
                <label>V1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>