force-app/main/default/objects/Lead/fields/Leads_Age__c.field-meta.xml
<CustomField>
    <fullName>Leads_Age__c</fullName>
    <formula>TODAY() - Lead_Assigned_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>