force-app/main/default/objects/Lead/fields/Leads_MTD_June__c.field-meta.xml
<CustomField>
    <fullName>Leads_MTD_June__c</fullName>
    <formula>IF(AND(MONTH( First_Activity_Date__c )=6,
OR(ISPICKVAL( Source_Intent__c ,&apos;Business-Development&apos;),
ISPICKVAL( Source_Intent__c ,&apos;Associate-Product-Management&apos;),
ISPICKVAL( Source_Intent__c ,&apos;Business-Analytics&apos;),
ISPICKVAL( Source_Intent__c ,&apos;hr-generalist&apos;),
ISPICKVAL( Source_Intent__c ,&apos;Digital-Marketing&apos;),
ISPICKVAL( Source_Intent__c ,&apos;operations-associate&apos;),
ISPICKVAL( Source_Intent__c ,&apos;Full-Stack-Development&apos;),
ISPICKVAL( Source_Intent__c ,&apos;Backend-Development&apos;),
ISPICKVAL( Source_Intent__c ,&apos;Frontend-Development&apos;),
ISPICKVAL( Source_Intent__c ,&apos;Data-Analytics&apos;),
ISPICKVAL( Source_Intent__c ,&apos;Software-Testing&apos;))),
Lead_Count__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads MTD June</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>