force-app/main/default/objects/Lead/fields/Leads_MTD_Tech__c.field-meta.xml
<CustomField>
    <fullName>Leads_MTD_Tech__c</fullName>
    <formula>IF(AND(MONTH( First_Activity_Date__c )=6,User_Category__c=&apos;Tech&apos;),
Lead_Count__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads MTD-Tech</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>