force-app/main/default/objects/Lead/fields/Learner_Uid__c.field-meta.xml
<CustomField>
    <fullName>Learner_Uid__c</fullName>
    <defaultValue>&quot;CTI&quot;</defaultValue>
    <label>Learner Uid</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>