force-app/main/default/objects/Lead/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan</label>
    <type>Checkbox</type>
</CustomField>