force-app/main/default/objects/Lead/fields/Loan_Pitched__c.field-meta.xml
<CustomField>
    <fullName>Loan_Pitched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Pitched</label>
    <type>Checkbox</type>
</CustomField>