force-app/main/default/objects/Lead/fields/Max_Lead_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Max_Lead_Per_Day__c</fullName>
    <formula>Owner:User.Max_Lead_Per_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Lead Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>