force-app/main/default/objects/Lead/fields/Maximum_Score__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Score__c</fullName>
    <label>Maximum Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>