force-app/main/default/objects/Lead/fields/NBFC_Reject__c.field-meta.xml
<CustomField>
    <fullName>NBFC_Reject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NBFC Reject</label>
    <type>Checkbox</type>
</CustomField>