force-app/main/default/objects/Lead/fields/New_Lead_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Lead_Assigned_Date__c</fullName>
    <formula>DATEVALUE( New_Lead_Assigned_DateTime__c+ 30/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Lead Assigned Date</label>
    <type>Date</type>
</CustomField>