force-app/main/default/objects/Lead/fields/New_Lead_Assigned_DateTime__c.field-meta.xml
<CustomField>
    <fullName>New_Lead_Assigned_DateTime__c</fullName>
    <label>New Lead Assigned Date/Time</label>
    <type>DateTime</type>
</CustomField>