force-app/main/default/objects/Lead/fields/New_Lead_Assigned_Time__c.field-meta.xml
<CustomField>
    <fullName>New_Lead_Assigned_Time__c</fullName>
    <formula>TIMEVALUE(( New_Lead_Assigned_DateTime__c+ (5.5/24)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Lead Assigned Time</label>
    <type>Time</type>
</CustomField>