force-app/main/default/objects/Lead/fields/Next_Followup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Followup_Date_Time__c</fullName>
    <description>Next Followup Date/Time</description>
    <label>Interview Date/Time</label>
    <type>DateTime</type>
</CustomField>