force-app/main/default/objects/Lead/fields/No_Activity_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Activity_Days__c</fullName>
    <formula>TODAY() -  Last_Activity_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Activity Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>