force-app/main/default/objects/Lead/fields/No_Connected_Call_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Connected_Call_Days__c</fullName>
    <formula>TODAY()  -  DATEVALUE( Last_Called_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Connected Call Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>