force-app/main/default/objects/Lead/fields/No_Dialed_Call_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Dialed_Call_Days__c</fullName>
    <formula>TODAY() -  DATEVALUE(Last_Connected_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Dialed Call Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>