force-app/main/default/objects/Lead/fields/No_of_Payment_Failure_Activity__c.field-meta.xml
<CustomField>
    <fullName>No_of_Payment_Failure_Activity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Payment Failure Activity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>