force-app/main/default/objects/Lead/fields/Nurturing_to_New_Stage__c.field-meta.xml
<CustomField>
    <fullName>Nurturing_to_New_Stage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of attempts when a lead is changed from Nurturing to New</description>
    <label>Nurturing to New Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>