force-app/main/default/objects/Lead/fields/Occupation_Profession__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Profession__c</fullName>
    <label>Profession (V)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AO_Interview_Status_Manual__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Working Professional</fullName>
                <label>WORKING PROFESSIONAL</label>
            </value>
            <value>
                <fullName>Student</fullName>
                <label>STUDENT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>