force-app/main/default/objects/Lead/fields/Offer_Rolled_Out_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Offer_Rolled_Out_Date_Time__c</fullName>
    <label>Offer Rolled Out Date/Time</label>
    <type>DateTime</type>
</CustomField>