force-app/main/default/objects/Lead/fields/Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status__c</fullName>
    <formula>IF( ISPICKVAL(Profession__c,&apos;&apos;) || ISPICKVAL(Communication__c , &apos;&apos;) || ISPICKVAL(Intent__c, &apos;&apos; )|| ISPICKVAL(Financials__c ,&apos;&apos;), &apos;&apos;, &apos;Yes&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Admission Letter</label>
    <type>Text</type>
</CustomField>