force-app/main/default/objects/Lead/fields/Order_Vlaue__c.field-meta.xml
<CustomField>
    <fullName>Order_Vlaue__c</fullName>
    <label>Order Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>