force-app/main/default/objects/Lead/fields/Orders_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Orders_This_Month__c</fullName>
    <formula>IF( and(  MONTH( Payment_Date__c )=6,Payment_details__c &gt;0,
 OR(User_Category__c=&apos;Tech&apos;,User_Category__c=&apos;Business&apos;)),
(Payment_details__c  + 1) -  Payment_details__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orders This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>