force-app/main/default/objects/Lead/fields/Owner_Change_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Owner_Change_Datetime__c</fullName>
    <label>Owner Change Datetime</label>
    <type>DateTime</type>
</CustomField>