force-app/main/default/objects/Lead/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <formula>DATEVALUE( Payment_DateTime__c + 30/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>