force-app/main/default/objects/Lead/fields/Payment_details__c.field-meta.xml
<CustomField>
    <fullName>Payment_details__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payment details</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>