force-app/main/default/objects/Lead/fields/Payment_Link_Sent__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Sent__c</fullName>
    <label>Payment Link Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>