force-app/main/default/objects/Lead/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Expected Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>One Shot</fullName>
            </value>
            <value>
                <fullName>Aadhaar Enabled Payment System (AEPS)</fullName>
                <isActive>false</isActive>
                <label>Aadhaar Enabled Payment System (AEPS)</label>
            </value>
            <value>
                <fullName>Bank pre-paid cards</fullName>
                <isActive>false</isActive>
                <label>Bank pre-paid cards</label>
            </value>
            <value>
                <fullName>Banking cards</fullName>
                <isActive>false</isActive>
                <label>Banking cards</label>
            </value>
            <value>
                <fullName>Bharat Interface for Money (BHIM) app</fullName>
                <isActive>false</isActive>
                <label>Bharat Interface for Money (BHIM) app</label>
            </value>
            <value>
                <fullName>Credit card</fullName>
                <isActive>false</isActive>
                <label>Credit card</label>
            </value>
            <value>
                <fullName>Debit card</fullName>
                <isActive>false</isActive>
                <label>Debit card</label>
            </value>
            <value>
                <fullName>Internet Banking</fullName>
                <isActive>false</isActive>
                <label>Internet Banking</label>
            </value>
            <value>
                <fullName>Mobile Banking</fullName>
                <isActive>false</isActive>
                <label>Mobile Banking</label>
            </value>
            <value>
                <fullName>Mobile Wallets</fullName>
                <isActive>false</isActive>
                <label>Mobile Wallets</label>
            </value>
            <value>
                <fullName>Net banking</fullName>
                <isActive>false</isActive>
                <label>Net banking</label>
            </value>
            <value>
                <fullName>Point of Sale (PoS)</fullName>
                <isActive>false</isActive>
                <label>Point of Sale (PoS)</label>
            </value>
            <value>
                <fullName>UPI</fullName>
                <isActive>false</isActive>
                <label>UPI</label>
            </value>
            <value>
                <fullName>USSD</fullName>
                <isActive>false</isActive>
                <label>USSD</label>
            </value>
            <value>
                <fullName>Wallet</fullName>
                <isActive>false</isActive>
                <label>Wallet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>