force-app/main/default/objects/Lead/fields/Payment_Not_Made__c.field-meta.xml
<CustomField>
    <fullName>Payment_Not_Made__c</fullName>
    <label>Payment Not Made</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Status of payment</fullName>
            </value>
            <value>
                <fullName>(Payment Not Made)&quot;</fullName>
            </value>
            <value>
                <fullName>Loan Got Rejected</fullName>
            </value>
            <value>
                <fullName>Does not have required docs for loan process</fullName>
            </value>
            <value>
                <fullName>Not Responding</fullName>
            </value>
            <value>
                <fullName>NATC</fullName>
            </value>
            <value>
                <fullName>Down Payment Challenge</fullName>
            </value>
            <value>
                <fullName>Need higher Loan Tenure</fullName>
            </value>
            <value>
                <fullName>Enrolled with Competitor</fullName>
            </value>
            <value>
                <fullName>Trust Issue</fullName>
            </value>
            <value>
                <fullName>Defferred Payment</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Looking for more discount</fullName>
            </value>
            <value>
                <fullName>Payment Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>