force-app/main/default/objects/Lead/fields/Payment_Notes_AC__c.field-meta.xml
<CustomField>
    <fullName>Payment_Notes_AC__c</fullName>
    <label>Payment Notes (AC)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>