force-app/main/default/objects/Lead/fields/Payment_Success_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Payment_Success_Date_Time__c</fullName>
    <label>Payment Success Date/Time</label>
    <type>DateTime</type>
</CustomField>