force-app/main/default/objects/Lead/fields/Payment_Time__c.field-meta.xml
<CustomField>
    <fullName>Payment_Time__c</fullName>
    <formula>If( ISNULL(Payment_DateTime__c  ),&quot;&quot;, LEFT(RIGHT(text(  Payment_DateTime__c  + 330/1440),9),8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Time</label>
    <type>Text</type>
</CustomField>