force-app/main/default/objects/Lead/fields/Phone_Temp__c.field-meta.xml
<CustomField>
    <fullName>Phone_Temp__c</fullName>
    <formula>LPAD(RIGHT(Phone , 4), LEN(Phone ), &apos;*&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Temp</label>
    <type>Text</type>
</CustomField>